0.3.1 Remove the "done" property.
